Fix color inversion of invisible chest in light mode

--- a/assets/static/common.css
+++ b/assets/static/common.css
@@ -355,8 +355,7 @@ footer,
 }
 
 @media not (prefers-color-scheme: dark) {
-    img[src="/static/chest/d256.png"],
-    img[src="/static/chest/d512.png"],
+    img.chest-d,
     .hash-icon[alt="SOLD OUT"] {
         filter: invert(1);
     }
